[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redthing1"
version = "0.1.0"
description = "a simple way to proxy imports in python"
authors = [{name = "Red Thing", email = "redthing1@alt.icu"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["importproxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
